[gd_scene load_steps=2 format=3 uid="uid://c4xjbrta00r3l"]

[ext_resource type="Script" path="res://score.gd" id="1_s36jj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s36jj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 643.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="listScore" type="Label" parent="."]
layout_mode = 0
offset_left = 721.0
offset_top = 3.0
offset_right = 1148.0
offset_bottom = 349.0
text = "Score:"

[node name="TotalScore" type="Label" parent="listScore"]
layout_mode = 0
offset_left = -4.0
offset_top = 370.0
offset_right = 429.0
offset_bottom = 643.0
text = "Total Score: "

[node name="Restart" type="Button" parent="."]
layout_mode = 0
offset_left = 859.0
offset_top = 493.0
offset_right = 973.0
offset_bottom = 524.0
text = "Restart Game"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 735.0
offset_top = 492.0
offset_right = 822.0
offset_bottom = 523.0
text = "Exit Game"

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
